WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216892
Fix some typo'd wheel event listener logging
https://bugs.webkit.org/show_bug.cgi?id=216892
Summary
Fix some typo'd wheel event listener logging
Tim Horton
Reported
2020-09-23 12:00:56 PDT
Fix some typo'd wheel event listener logging
Attachments
Patch
(1.63 KB, patch)
2020-09-23 12:01 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-09-23 12:01:24 PDT
Created
attachment 409492
[details]
Patch
Wenson Hsieh
Comment 2
2020-09-23 12:03:18 PDT
Comment on
attachment 409492
[details]
Patch rs=me
EWS
Comment 3
2020-09-23 14:17:11 PDT
Committed
r267499
: <
https://trac.webkit.org/changeset/267499
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409492
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-09-23 14:18:17 PDT
<
rdar://problem/69457292
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug