Fix some typo'd wheel event listener logging https://bugs.webkit.org/show_bug.cgi?id=216892

Reviewed by Wenson Hsieh.

* rendering/EventRegion.cpp:
(WebCore::EventRegion::uniteEventListeners):
Wheel is passive, NonPassiveWheel is active.


Canonical link: https://commits.webkit.org/229683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267499 268f45cc-cd09-0410-ab3c-d52691b4dbfc